# league-client

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml
league_client/: __init__.py  account_info.py  chat.py  connection.py  constants.py  decorators.py  disenchant.py  email.py  exceptions.py  forge.py  friend_requests.py  friends.py  gifting.py  inventory.py  logger.py  login.py  logout.py  loot.py  match_history.py  password.py  phases.json  ranked.py  riot.py  riot_userinfo.py  rso.py  rso_auth.py  rso_ledge.py  rso_tokens.py  rso_userinfo.py  session.py  shortcuts.py  summoner.py  summoners.py  token.py  types.py  user_info.py  userinfo.py  username.py  utils.py  wallet.py
league_client/lcu/: craft.py  disenchant.py  forge.py  inventory.py  lobby.py  logout.py  loot.py  match_history.py  ranked.py  riot.py  session.py  summoner.py  username.py  wallet.py
league_client/rcu/: auth.py  region_locale.py  userinfo.py
league_client/rso/: account.py  auth.py  capsule.py  chat.py  constants.py  craft.py  disenchant.py  honor.py  inventory.py  key.py  loot-new.py  loot.py  match.py  missions.py  models.py  party.py  password.py  rank.py  sign_up.py  skin.py  userinfo.py  utils.py  verifications.py
league_client/shortcuts/: logger.py  login.py  logout.py  process.py  rso.py
league_process/: process.py  utils.py
