[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "league-client"
version = "2.1.2"
dependencies = ["httpx"]
requires-python = ">=3"
authors = [{ name = "Pradish Bijukchhe", email = "pradishbijukchhe@gmail.com" }]
description = "league-client is a python package to communicate with riot servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = []
classifiers = ["Programming Language :: Python :: 3"]

[project.optional-dependencies]
lcu = ["psutil"]

[project.urls]
Homepage = "https://github.com/sandbox-pokhara/league-client"
Issues = "https://github.com/sandbox-pokhara/league-client/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"league_client" = "league_client"

[tool.isort]
line_length = 79
force_single_line = true

[tool.black]
line-length = 79
preview = true

[tool.pyright]
include = ["league_client", "test.py"]
typeCheckingMode = "strict"
